Working block reading from biomes